[gd_scene load_steps=3 format=3 uid="uid://bu1ji7n825w7x"]

[ext_resource type="Script" path="res://src/television/score_displays/USOpenScoreDisplay.gd" id="1_jwjy5"]
[ext_resource type="PackedScene" uid="uid://l4d1s1kqx3b7" path="res://src/television/score_displays/PlayerScorePanel.tscn" id="2_y8th3"]

[node name="ScoreDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jwjy5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 42.0

[node name="Player1ScorePanel" parent="VBoxContainer" instance=ExtResource("2_y8th3")]
layout_mode = 2

[node name="Player2ScorePanel" parent="VBoxContainer" instance=ExtResource("2_y8th3")]
layout_mode = 2
