[gd_scene load_steps=3 format=3 uid="uid://djjxvsnmspjrf"]

[ext_resource type="Script" path="res://src/television/score_displays/USOpenScoreDisplay.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://l4d1s1kqx3b7" path="res://src/television/score_displays/PlayerScorePanel.tscn" id="2_bumyy"]

[node name="ScoreDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 42.0

[node name="PlayerScorePanel" parent="VBoxContainer" instance=ExtResource("2_bumyy")]
layout_mode = 2

[node name="PlayerScorePanel2" parent="VBoxContainer" instance=ExtResource("2_bumyy")]
layout_mode = 2
